# trash-in-treasure-out

./: Cargo.toml  README.md  text.md
src/: error.rs  lib.rs  main.rs  session.rs  ticket_machine.rs
src/types/: class.rs  customer_details.rs  departure_or_arrival.rs  location.rs  mod.rs  payment_info.rs  ticket_machine.rs  trip.rs
tests/: main.rs
