[package]
name = "takeoff"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
axum = { version = "0.7", features = ["macros"] }
axum_session = "0.14.4"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
nutype = { version = "0.5.0", features = ["regex", "serde"] }
regex = "1.11.1"
validator = { version = "0.19.0", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.12.9", features = ["json", "cookies"] }
serde_json = "1.0.133"
test-case = "3.3.1"
url = "2.5.4"
# Axum, serde, serde_json,

[patch.crates-io]
# TODO remove patch once 
# <https://github.com/Keats/validator/pull/361/files> lands
validator = { git = "https://github.com/hdoordt/validator" }